# wavely-desktop

./: .gitignore  LICENSE.txt  README.md  index.html  main.js  package-lock.json  package.json  preload.js  visualizer-options.html
scripts/: generate-icon.js  prepare-tauri.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
